--- a/config/database.yml
+++ b/config/database.yml
@@ -9,9 +9,20 @@ default: &default
   pool: 5
   timeout: 5000
 
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
+  
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: mysql    #사용할 database
+  encoding: utf8
+  reconnect: false
+  database: cafe  # 실제 mysql에 생성되는 database 이름
+  pool: 5
+  username: cafe    # mysql에 접속할 id와 password
+  password: cafe
+  socket: /tmp/mysql.sock # 보통 mysql.sock은 tmp에 있다. (시스템에 따라..)
+  
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
